fix alignment issue when cart fills up

--- a/src/App.scss
+++ b/src/App.scss
@@ -56,7 +56,7 @@ a:visited {
 .list-container {
   display: flex;
   flex-direction: row;
-
+  align-items: flex-start;
 }
 
 .img-logo {
